--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ table {
 
 
 .head{
-  width: 1060px;
+  width: 100%;
   height: 180px;
   background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/6/6e/Veil_Nebula_-_NGC6960.jpg/2560px-Veil_Nebula_-_NGC6960.jpg');
   border-top-right-radius: 5px;
@@ -63,6 +63,7 @@ table {
   background-size: cover;
   background-repeat: no-repeat;
 	background-position: center;
+	margin:0 auto;
 
 }
 
@@ -83,16 +84,17 @@ table {
 }
 .columns{
   width:90%;
-  padding-top: 20px;
+  padding-top: 15px;
   overflow: auto;
   text-align: center;
+
 
 
 
 }
 .sidebar{
   width:15%;
-  outline: solid 1px red;
+
   float:left;
   min-height: 400px;
   margin-left: 50px;
@@ -110,11 +112,18 @@ table {
 }
 .main-bar{
   width:75%;
-  outline:solid 1px red;
   float:left;
   min-height: 400px;
   margin-right:40px;
   margin-top: 70px;
+	font-size: 1.6em;
+	font-family: Helvetica;
+	font-weight: bold;
+	text-align: left;
+	line-height: 32px;
+	color: #3F484D;
+	position: relative;
+
 }
 .sidebar-content{
 	font-family: serif;
@@ -135,6 +144,27 @@ input{
 	background-repeat: no-repeat;
 	background-position: right;
 	font-size: .75em;
+
+
+}
+.main-bar-content{
+	font-family: serif;
+	font-size: .55em;
+	color: #96A1AE;
+	font-style: italic;
+	font-weight: normal;
+
+
+
+}
+.main-bar-content a{
+	text-decoration: none;
+}
+.bottom-image{
+	width:75px;
+	height: 20%;
+
+
 
 
 }
